Fix for displaying plain text file types in dark mode under Windows #7670
- Add text.json grammar definition for plain text files
- Register RawExplorerFileType in file type handlers to display editor icon
- Override getLanguageId() in TextExplorerFileTypeHandler to return "plaintext"
- Replace list.get(0) with list.getFirst() for better readability
- Simplify instanceof pattern matching in ExplorerPerspective